CLEANFILES =
rtbuf_includedir = $(includedir)/rtbuf/signal
rtbuf_include_HEADERS =
rtbuf_libdir = $(libdir)/rtbuf/signal
rtbuf_lib_LTLIBRARIES =

rtbuf_lib_LTLIBRARIES += bandpass2.la
bandpass2_la_LDFLAGS = -no-undefined -module -shared
bandpass2_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += delay.la
delay_la_LDFLAGS = -no-undefined -module
delay_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += equalizer10.la
equalizer10_la_LDFLAGS = -no-undefined -module
equalizer10_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += flanger.la
flanger_la_LDFLAGS = -no-undefined -module
flanger_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += hipass.la
hipass_la_LDFLAGS = -no-undefined -module
hipass_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += hipass2.la
hipass2_la_LDFLAGS = -no-undefined -module
hipass2_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += hipass3.la
hipass3_la_LDFLAGS = -no-undefined -module
hipass3_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += hipass4.la
hipass4_la_LDFLAGS = -no-undefined -module
hipass4_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += hipass5.la
hipass5_la_LDFLAGS = -no-undefined -module
hipass5_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += lowpass.la
lowpass_la_LDFLAGS = -no-undefined -module
lowpass_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += lowpass2.la
lowpass2_la_LDFLAGS = -no-undefined -module
lowpass2_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += lowpass3.la
lowpass3_la_LDFLAGS = -no-undefined -module
lowpass3_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += lowpass4.la
lowpass4_la_LDFLAGS = -no-undefined -module
lowpass4_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += lowpass5.la
lowpass5_la_LDFLAGS = -no-undefined -module
lowpass5_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += sawtooth.la
sawtooth_la_LDFLAGS = -no-undefined -module
sawtooth_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += sinus.la
sinus_la_LDFLAGS = -no-undefined -module
sinus_la_LIBADD = ../librtbuf_signal.la

rtbuf_lib_LTLIBRARIES += square.la
square_la_LDFLAGS = -no-undefined -module
square_la_LIBADD = ../librtbuf_signal.la
